# kmers

./: CMakeLists.txt  kseq_cpp.h  main.cpp  setup.py  vectorizer-1.0-cp36-cp36m-win_amd64.whl  vectorizer-1.0-cp37-cp37m-win_amd64.whl  vectorizer-2.0-cp36-cp36m-win_amd64.whl  vectorizer-3.0-cp36-cp36m-win_amd64.whl  vectorizer.cp36-win_amd64.pyd  vectorizer.cpp  vectorizer.h  vectorizer_bind.cpp  vectorizer_bind.h
vectorizer-1.0.dist-info/: METADATA  RECORD
vectorizer.egg-info/: PKG-INFO  SOURCES.txt
